Add missing license field

--- a/ansi.opam
+++ b/ansi.opam
@@ -5,6 +5,7 @@ This package provides a basic ANSI escape parser,
 allowing the OCurrent web UI to show logs in colour."""
 maintainer: "talex5@gmail.com"
 authors: "talex5@gmail.com"
+license: "Apache-2.0"
 homepage: "https://github.com/ocurrent/ansi"
 bug-reports: "https://github.com/ocurrent/ansi/issues"
 dev-repo: "git+https://github.com/ocurrent/ansi.git"
